# robust-predicates

./: Cargo.toml  LICENCE.md  README.md  build.rs
src/: lib.rs  predicates.c  predicates.rs
