[package]
name = "robust-predicates"
description = "Robust predicates for computer geometry"
version = "0.1.4"
authors = ["hporro <heinich.porro@unilim.fr>"]
edition = "2021"
license = "MIT"
keywords = ["geometry", "math", "robust", "predicates"]
homepage = "https://github.com/hporro/robust-predicates"
repository = "https://github.com/hporro/robust-predicates"
